# demo/src/main/java/com/jspring1/demo/controllers/BlogController.java
@@ -32,8 +32,8 @@ public class BlogController {
     }
 
     @PostMapping("/blog/add")
-        public String blogPostAdd(@RequestParam String title, @RequestParam String anons, @RequestParam String full_text, Model model) {
-            Post post = new Post(title, anons, full_text);
+        public String blogPostAdd(@RequestParam String title, @RequestParam String preview, @RequestParam String content, Model model) {
+            Post post = new Post(title, preview, content);
             repository.save(post);
             return "redirect:/blog";
         }
@@ -63,11 +63,11 @@ public class BlogController {
     }
 
     @PostMapping("/blog/{id}/edit")
-    public String blogPostUpdate(@PathVariable(value= "id") String id, @RequestParam String title, @RequestParam String anons, @RequestParam String full_text, Model model) {
+    public String blogPostUpdate(@PathVariable(value= "id") String id, @RequestParam String title, @RequestParam String preview, @RequestParam String content, Model model) {
         Post post = repository.findById(id).orElseThrow();
         post.setTitle(title);
-        post.setAnons(anons);
-        post.setFull_text(full_text);
+        post.setpreview(preview);
+        post.setcontent(content);
         repository.save(post);
         return "redirect:/blog";
     }
